# encuadro

./: .gitignore  Calibracion ipad  README.md  pablofloresguridi
CalibCamaras/iPhone352x288/: calib_data.mat  iPhone_calib_352x288.txt
CalibCamaras/iPhone640x480/: calib_data.mat  iPhone_calib_640x480.txt
CalibCamaras/iPod640x480/: calib_data.mat  iPod_calib_640x480.txt
CalibCamaras/iPod960x720/: Calib_Results.mat  iPod_calib.txt
CalibCamaras/lumix640x480/: calib_data.mat  calib_lumix.txt
Cliente/Android/: README.txt
Respaldo Server/: accion.php  borrar.php  brillo.sh  index.php  ls.php  prueba.sh  suma  suma.c  suma.php  tercer  upload.php
_backup/proftpd/: proftpd.conf  sql.conf  virtuals.conf
_backup/prueba_binario/: Documento sin título  caca.txt  encuadroSift  encuadroSift (copia).c  encuadroSift (otra copia).c  encuadroSift.c  encuadroSift.h
c/Integracion2/: .cproject  Composit.c  coplanar.c  coplanar.h  la foto3.pgm  la foto4.pgm  la foto6.pgm  la foto7.pgm  makefile  marker_detection  marker_detection.c
c/aruco/aruco-1.0.0/utils/: CMakeLists.txt  aruco_create_board.cpp  aruco_create_marker.cpp  aruco_simple.cpp  aruco_simple_board.cpp  aruco_test.cpp  aruco_test_board.cpp  aruco_test_board_gl.cpp  aruco_test_board_mask.cpp  aruco_test_gl.cpp  common.h
c/coplanarPosit-SoftPosit/: Composit.c  Composit.h  Main.c  PositCopl.c  SoftPosit.c  SoftPosit.h
renders/: Marker.blend  Marker.stl  moveMarker.py
renders/vtk/marker/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  marker  marker.cpp
server/: aca  prueba.php
(+2379 files in other folders)
